--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                 <span lang="zh">后端：Java（Spring Boot，Spring MVC）、C#（.NET Core，ASP.NET）</span>
             </li>
             <li>
-                <span lang="en">Frontend: React.js, SEO, Frontend Engineering & Build Optimization (Webpack/Vite), V8 Rendering Engine, Browser Event Loop & Message Queue</span>
-                <span lang="zh">前端：React.js、SEO、前端工程与构建优化（Webpack/Vite）、V8 渲染引擎、浏览器事件循环与消息队列</span>
+                <span lang="en">Frontend: React.js, SEO, Frontend Engineering & Build Optimization (Webpack/Vite), V8 Rendering Engine, Browser Event Loop & Message Queue, Typescript</span>
+                <span lang="zh">前端：React.js、SEO、前端工程与构建优化（Webpack/Vite）、V8 渲染引擎、浏览器事件循环与消息队列, Typescript</span>
             </li>
             <li>
                 <span lang="en">Database: MyBatis, SQL, MongoDB</span>
